# labs_bmstu

./: .gitignore  README.md
1_sem/lab_03/: lab03.pages
1_sem/lab_04_0/: func.cpp  func.hpp  struct_returnans.cpp
1_sem/lab_05/: bubble.cpp  collect_stat.cpp  min_max_elem-max->min.cpp  rand.cpp
1_sem/lab_06/: IntRect.cpp  IntTrap.cpp  funcs.cpp  lab_06_task.rtf
1_sem/lab_09/: dictionary.txt  main.cpp
1_sem/lab_10/: mult.cpp
2_sem/lab_01/: CMakeLists.txt  header.h  main.cpp
2_sem/lab_02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.txt  header.hpp  lab_2  main.cpp
2_sem/lab_02/planet/: CMakeLists.txt  planet.cpp  planet.h
2_sem/lab_02/team/: CMakeLists.txt  team.cpp  team.h
2_sem/lab_02_x/: data.txt  header.hpp
2_sem/lab_03/: CMakeLists.txt  main.cpp
2_sem/lab_04/: CMakeLists.txt  header.h  main.cpp
2_sem/lab_05/: CMakeLists.txt  header.h  main.cpp
2_sem/lab_06/: CMakeLists.txt  header.h  main.cpp
2_sem/lab_06/polynomial/: CMakeLists.txt  polynomial.cpp  polynomial.h
2_sem/lab_07/: CMakeLists.txt  main.cpp
2_sem/lab_07/product/: CMakeLists.txt  product.cpp  product.h
2_sem/lab_08/: header.h  main.cpp
2_sem/lab_08/lab_08_3/: CMakeLists.txt  a_third.txt  header.h  third.cpp
3_sem/RK/: Отчет_РК_1.docx  Отчет_РК_2.docx
3_sem/lab_01/: main.py
3_sem/lab_02/: main.py
3_sem/lab_03/: main.py  process_data.py  uinttests.py
3_sem/lab_05/: main.py  mainaaa.py
hw/hw/: main.cpp
lab_03/lab_03/: main.cpp
lab_03/lab_03.xcodeproj/: project.pbxproj
lab_04/lab_04/: main.cpp
lab_04/lab_04.xcodeproj/: project.pbxproj
lab_04_0/: binary.cpp  binary.hpp  func.cpp  head.cpp  head.hpp  iterations.cpp  iterations.hpp  newton.cpp  newton.hpp  struct_returnans.hpp
lab_04_0/lab_04_0/: main.cpp
lab_04_0/lab_04_0.xcodeproj/: project.pbxproj
lab_05/: bubble-max->min.cpp  bubble-max->min.hpp  bubble.cpp  bubble.hpp  collect_stat.cpp  hppcommon.hpp  min-max-elem.cpp  min-max-elem.hpp  min_max_elem-max->min.cpp  min_max_elem-max->min.hpp  output.cpp  output.hpp  rand.hpp  razdel.cpp  razdel.hpp  struct_return.cpp  struct_return.hpp
lab_05/lab_05/: main.cpp
lab_05/lab_05.xcodeproj/: project.pbxproj
lab_06/: commonheader.hpp  funcs.cpp  print.cpp
lab_06/lab_06/: main.cpp
lab_06/lab_06.xcodeproj/: project.pbxproj
lab_07/lab_07/: clues.txt  clues8.txt  decoded.txt  encrypted.txt  main.cpp  tobedecoded.txt  tobeencrypted.txt
lab_07/lab_07.xcodeproj/: project.pbxproj
lab_08/lab_08/: main.cpp
lab_08/lab_08.xcodeproj/: project.pbxproj
lab_09/: dic.txt  funcs.cpp  header.hpp
lab_09/lab_09.xcodeproj/: project.pbxproj
lab_10/: Inverting.cpp  commonheader.hpp  make_matrix.cpp  mult.cpp
(+109 files in other folders)
